# hrry.me

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum
.github/workflows/: builds.yml  ci.yml  publish.yml
cmd/pdsctrl/: Dockerfile  go.mod  main.go
cmd/tools/debug/: debug.yml
config/: yamllint.yml
config/ansible/: ansible-lint.yml  inventory.yml  site.yml
config/ansible/playbooks/: router.yml
config/docker/: docker-bake.hcl
config/helm/: Makefile
config/k8s/: k3d.yml
config/k8s/prd/: ingress-routes.yml  kustomization.yml
docs/: router.md  services.md
frontend/1k/: index.html
pkg/app/: saml.go  saml_test.go
scripts/: buildx.sh  certs.sh  configure.sh
scripts/infra/: k3d-load.sh
scripts/router/: minecraft-nat.rsc
scripts/shell/: common.sh
scripts/tools/: bake
services/bk/: .editorconfig  Cargo.toml  collisions.py
services/bk/migrations/: V1__init.sql
services/bk/scripts/: count.sql  drop.sql  sorted-tables.sql  test.sql
services/bk/src/: cli.rs  dao.rs  error.rs  import.rs  main.rs  migrate.rs  server.rs
services/bk/src/queries/: add_tag.sql  add_tags.sql  children.sql  dir_children.sql  dir_update.sql  entry_children.sql  entry_get.sql  entry_insert.sql  entry_remove_tag.sql  entry_tags_by_uid.sql  entry_update.sql  parent_dirs.sql  root_dirs.sql
services/bk/templates/: index.html
terraform/: .terraform.lock.hcl  bsky.tf  cloudflare.tf  emails.tf  h3y.sh.tf  hrry.dev.tf  hrry.io.tf  hrry.lol.tf  hrry.me.tf  main.tf  r2.tf  willmusic.education.tf
terraform/projects/: .gitignore
(+66 files in other folders)
